// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots RenderCounter Counter 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          RenderCounter
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          Counter
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        style={
          Object {
            "border": "solid 1px grey",
            "height": 400,
            "padding": 10,
            "width": 600,
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "#f95",
              "borderRadius": "8px",
              "color": "white",
              "display": "inline-block",
              "float": "right",
              "fontSize": "8pt",
              "fontWeight": "bold",
              "padding": "1px 5px",
              "textAlign": "center",
              "top": "2px",
            }
          }
        >
          1
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#f95",
              "borderRadius": "8px",
              "color": "white",
              "display": "inline-block",
              "float": "right",
              "fontSize": "8pt",
              "fontWeight": "bold",
              "padding": "1px 5px",
              "textAlign": "center",
              "top": "2px",
            }
          }
        >
          2
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#f95",
              "borderRadius": "8px",
              "color": "white",
              "display": "inline-block",
              "float": "right",
              "fontSize": "8pt",
              "fontWeight": "bold",
              "padding": "1px 5px",
              "textAlign": "center",
              "top": "2px",
            }
          }
        >
          3
        </div>
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                div
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    style
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            width
                          </span>
                          : 
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }
                            >
                              600
                            </span>
                          </span>
                          , 
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            height
                          </span>
                          : 
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }
                            >
                              400
                            </span>
                          </span>
                          , 
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            border
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            solid 1px grey
                            "
                          </span>
                          , 
                          …
                          }
                        </span>
                      </span>
                    </span>
                  </span>
                  
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                Counter
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    count
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }
                        >
                          1
                        </span>
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                Counter
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    count
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }
                        >
                          2
                        </span>
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                Counter
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    count
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }
                        >
                          3
                        </span>
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;/
                div
                &gt;
              </span>
            </div>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            Counter
            " Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }
          >
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
                <th>
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  count
                </td>
                <td>
                  number
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
                <td />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots RenderCounter RenderCounter 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          RenderCounter
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          RenderCounter
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        style={
          Object {
            "border": "solid 1px grey",
            "height": 400,
            "padding": 10,
            "width": 600,
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "#f95",
              "borderRadius": "8px",
              "color": "white",
              "display": "inline-block",
              "float": "right",
              "fontSize": "8pt",
              "fontWeight": "bold",
              "padding": "1px 5px",
              "textAlign": "center",
              "top": "2px",
            }
          }
        >
          1
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#f95",
              "borderRadius": "8px",
              "color": "white",
              "display": "inline-block",
              "float": "right",
              "fontSize": "8pt",
              "fontWeight": "bold",
              "padding": "1px 5px",
              "textAlign": "center",
              "top": "2px",
            }
          }
        >
          1
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#f95",
              "borderRadius": "8px",
              "color": "white",
              "display": "inline-block",
              "float": "right",
              "fontSize": "8pt",
              "fontWeight": "bold",
              "padding": "1px 5px",
              "textAlign": "center",
              "top": "2px",
            }
          }
        >
          2
        </div>
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <p
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "
                -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
                \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
              ",
              "fontSize": "15px",
            }
          }
        >
          This is the basic usage inside any component.
        </p>
        <p
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "
                -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
                \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
              ",
              "fontSize": "15px",
            }
          }
        >
          NOTICE: You may see them render an extra time. That’s a bug of storybook when you enter this page directly.
        </p>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                div
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    style
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            width
                          </span>
                          : 
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }
                            >
                              600
                            </span>
                          </span>
                          , 
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            height
                          </span>
                          : 
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }
                            >
                              400
                            </span>
                          </span>
                          , 
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            border
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            solid 1px grey
                            "
                          </span>
                          , 
                          …
                          }
                        </span>
                      </span>
                    </span>
                  </span>
                  
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                RenderCounter
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                RenderCounter
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                RenderCounter
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    initialCount
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        <span
                          style={
                            Object {
                              "color": "#a11",
                            }
                          }
                        >
                          2
                        </span>
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;/
                div
                &gt;
              </span>
            </div>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            RenderCounter
            " Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }
          >
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
                <th>
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  initialCount
                </td>
                <td>
                  number
                </td>
                <td>
                  no
                </td>
                <td>
                  <span>
                    <span
                      style={
                        Object {
                          "color": "#a11",
                        }
                      }
                    >
                      1
                    </span>
                  </span>
                </td>
                <td />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots RenderCounter StatelessRenderCounter 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          RenderCounter
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          StatelessRenderCounter
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        style={
          Object {
            "border": "solid 1px grey",
            "height": 400,
            "padding": 10,
            "width": 600,
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "#f95",
              "borderRadius": "8px",
              "color": "white",
              "display": "inline-block",
              "float": "right",
              "fontSize": "8pt",
              "fontWeight": "bold",
              "padding": "1px 5px",
              "textAlign": "center",
              "top": "2px",
            }
          }
        >
          1
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#f95",
              "borderRadius": "8px",
              "color": "white",
              "display": "inline-block",
              "float": "right",
              "fontSize": "8pt",
              "fontWeight": "bold",
              "padding": "1px 5px",
              "textAlign": "center",
              "top": "2px",
            }
          }
        >
          1
        </div>
        <div
          style={
            Object {
              "backgroundColor": "#f95",
              "borderRadius": "8px",
              "color": "white",
              "display": "inline-block",
              "float": "right",
              "fontSize": "8pt",
              "fontWeight": "bold",
              "padding": "1px 5px",
              "textAlign": "center",
              "top": "2px",
            }
          }
        >
          1
        </div>
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <p
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "
                -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
                \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
              ",
              "fontSize": "15px",
            }
          }
        >
          This is another implement of RenderCounter
        </p>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                div
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    style
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            width
                          </span>
                          : 
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }
                            >
                              600
                            </span>
                          </span>
                          , 
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            height
                          </span>
                          : 
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }
                            >
                              400
                            </span>
                          </span>
                          , 
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            border
                          </span>
                          : 
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            solid 1px grey
                            "
                          </span>
                          , 
                          …
                          }
                        </span>
                      </span>
                    </span>
                  </span>
                  
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                withRenderCount(Counter)
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                withRenderCount(Counter)
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 33,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                withRenderCount(Counter)
              </span>
              <span />
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                /&gt;
              </span>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;/
                div
                &gt;
              </span>
            </div>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            withRenderCount(Counter)
            " Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }
          >
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
                <th>
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  initialCount
                </td>
                <td>
                  number
                </td>
                <td>
                  no
                </td>
                <td>
                  <span>
                    <span
                      style={
                        Object {
                          "color": "#a11",
                        }
                      }
                    >
                      1
                    </span>
                  </span>
                </td>
                <td />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots RenderCounter inside DivRefreshable 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          RenderCounter
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          inside DivRefreshable
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        style={
          Object {
            "width": 600,
          }
        }
      >
        <h4>
          Normal Counter won't re-render unless it's updated, e.g. hot module reload
        </h4>
        <div
          style={
            Object {
              "border": "1px solid black",
              "padding": 10,
            }
          }
        >
          <button
            onClick={[Function]}
          >
            Refresh
          </button>
          <div
            style={
              Object {
                "backgroundColor": "#f95",
                "borderRadius": "8px",
                "color": "white",
                "display": "inline-block",
                "float": "right",
                "fontSize": "8pt",
                "fontWeight": "bold",
                "padding": "1px 5px",
                "textAlign": "center",
                "top": "2px",
              }
            }
          >
            1
          </div>
        </div>
        <h4>
          This div will update its child
        </h4>
        <div
          style={
            Object {
              "border": "1px solid black",
              "padding": 10,
            }
          }
        >
          <button
            onClick={[Function]}
          >
            Refresh and Clone Child
          </button>
          <div
            style={
              Object {
                "backgroundColor": "#f95",
                "borderRadius": "8px",
                "color": "white",
                "display": "inline-block",
                "float": "right",
                "fontSize": "8pt",
                "fontWeight": "bold",
                "padding": "1px 5px",
                "textAlign": "center",
                "top": "2px",
              }
            }
          >
            1
          </div>
        </div>
        <h4>
          onRefresh can be decide to trigger or not
        </h4>
        <div
          style={
            Object {
              "border": "1px solid black",
              "padding": 10,
            }
          }
        >
          <button
            onClick={[Function]}
          >
            Refresh in 50% possibility and Clone Child
          </button>
          <div
            style={
              Object {
                "backgroundColor": "#f95",
                "borderRadius": "8px",
                "color": "white",
                "display": "inline-block",
                "float": "right",
                "fontSize": "8pt",
                "fontWeight": "bold",
                "padding": "1px 5px",
                "textAlign": "center",
                "top": "2px",
              }
            }
          >
            1
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
            \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
          ",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
        }
      }
    >
      
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem",
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;
                div
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}
                  >
                    style
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}
                    >
                      <span>
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            width
                          </span>
                          : 
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }
                            >
                              600
                            </span>
                          </span>
                          }
                        </span>
                      </span>
                    </span>
                  </span>
                  
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &gt;
              </span>
            </div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  h4
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 48,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  Normal Counter won't re-render unless it's updated, e.g. hot module reload
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;/
                  h4
                  &gt;
                </span>
              </div>
            </div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  DivRefreshable
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 48,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  RenderCounter
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;/
                  DivRefreshable
                  &gt;
                </span>
              </div>
            </div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  h4
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 48,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  This div will update its child
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;/
                  h4
                  &gt;
                </span>
              </div>
            </div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  DivRefreshable
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      label
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          "
                          Refresh and Clone Child
                          "
                        </span>
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      cloneChild
                    </span>
                    
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 48,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  RenderCounter
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;/
                  DivRefreshable
                  &gt;
                </span>
              </div>
            </div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  h4
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 48,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  onRefresh can be decide to trigger or not
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;/
                  h4
                  &gt;
                </span>
              </div>
            </div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  DivRefreshable
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      label
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          "
                          Refresh in 50% possibility and Clone Child
                          "
                        </span>
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      cloneChild
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      onRefresh
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        <span>
                          <span
                            style={
                              Object {
                                "color": "#170",
                              }
                            }
                          >
                            onRefresh()
                          </span>
                        </span>
                      </span>
                    </span>
                    
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 48,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  RenderCounter
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;/
                  DivRefreshable
                  &gt;
                </span>
              </div>
            </div>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }
            >
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }
              >
                &lt;/
                div
                &gt;
              </span>
            </div>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            DivRefreshable
            " Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10,
              }
            }
          >
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
                <th>
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  children
                </td>
                <td>
                  element
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
                <td />
              </tr>
              <tr>
                <td>
                  cloneChild
                </td>
                <td>
                  bool
                </td>
                <td>
                  no
                </td>
                <td>
                  <span>
                    <span
                      style={
                        Object {
                          "color": "#a11",
                        }
                      }
                    >
                      false
                    </span>
                  </span>
                </td>
                <td />
              </tr>
              <tr>
                <td>
                  label
                </td>
                <td>
                  string
                </td>
                <td>
                  no
                </td>
                <td>
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    "
                    Refresh
                    "
                  </span>
                </td>
                <td />
              </tr>
              <tr>
                <td>
                  onRefresh
                </td>
                <td>
                  func
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
                <td />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<div
  style={
    Object {
      "fontFamily": "\\"Helvetica Neue\\", Helvetica, \\"Segoe UI\\", Arial, freesans, sans-serif",
      "lineHeight": 1.4,
      "margin": 15,
    }
  }
>
  <h1>
    Welcome to STORYBOOK
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've
     added some basic stories inside the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample 
    <a
      href="#/"
      onClick={[Function]}
      style={
        Object {
          "borderBottom": "1px solid #1474f3",
          "color": "#1474f3",
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
    >
      stories
    </a>
     for a component called 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      RenderCounter
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
     component located at 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories/Button.js
    </code>
    .)
  </p>
  <p>
    This is just one thing you can do with Storybook.
    <br />
    Have a look at the 
    <a
      href="https://github.com/kadirahq/react-storybook"
      rel="noopener noreferrer"
      style={
        Object {
          "borderBottom": "1px solid #1474f3",
          "color": "#1474f3",
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      target="_blank"
    >
      React Storybook
    </a>
     repo for more information.
  </p>
  <p
    style={
      Object {
        "opacity": 0.5,
      }
    }
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</div>
`;

exports[`Storyshots Welcome to react-render-counter 1`] = `
<div>
  <h1
    data-sourcepos={undefined}
  >
    hhh
  </h1>
  <h2
    data-sourcepos={undefined}
  >
    h2
  </h2>
</div>
`;

exports[`Storyshots Welcome to stupid-rc-starter 1`] = `
<div>
  <h1
    data-sourcepos={undefined}
  >
    hhh
  </h1>
  <h2
    data-sourcepos={undefined}
  >
    h2
  </h2>
</div>
`;
